<resources>
    <string name="app_name">Idle Ballz</string>
    <string name="ball1">Ball</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="quit_msg">Quit the Game ?</string>

    <string name="easy">easy</string>
    <string name="normal">Normal</string>
    <string name="hard">Hard</string>
    <string name="insane">Insane</string>
    <string name="best_score">Best Score</string>
    <string name="settings">Settings</string>
    <string name="quit">Quit</string>
</resources>
