<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="100dp">

    <Button
        android:id="@+id/easy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/easy"/>

    <Button
        android:id="@+id/normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/normal"/>

    <Button
        android:id="@+id/hard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hard"/>

    <Button
        android:id="@+id/insane"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/insane"/>

     <Button
        android:id="@+id/best_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/best_score"/>

     <Button
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings"/>

     <Button
        android:id="@+id/quit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quit"/>


</LinearLayout>
